--- a/gateway/docker/production/nginx/Dockerfile
+++ b/gateway/docker/production/nginx/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:1.23-alpine
 
+COPY ./docker/common/nginx/snippets /etc/nginx/snippets
 COPY ./docker/production/nginx/conf.d /etc/nginx/conf.d
 
 WORKDIR /app
