--- a/gateway/docker/production/nginx/conf.d/api.conf
+++ b/gateway/docker/production/nginx/conf.d/api.conf
@@ -13,9 +13,9 @@ server {
     server_name api.demo-auction.gusevandrey.ru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/gusevandrey.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/gusevandrey.ru/private.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/gusevandrey.ru/chain.pem;
+    ssl_certificate /etc/letsencrypt/live/api.demo-auction.gusevandrey.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.demo-auction.gusevandrey.ru/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/api.demo-auction.gusevandrey.ru/chain.pem;
 
     include /etc/nginx/snippets/ssl.conf;
     include /etc/nginx/snippets/certbot.conf;
