--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,9 @@ services:
     volumes:
       - ./api:/app
 
-  # api-php-cli:
-  #   build:
-  #     context: api/docker
-  #     dockerfile: development/php-cli/Dockerfile
-  #   volumes:
-  #     - ./api:/app
+  api-php-cli:
+    build:
+      context: api/docker
+      dockerfile: development/php-cli/Dockerfile
+    volumes:
+      - ./api:/app
