--- a/api/composer.json
+++ b/api/composer.json
@@ -13,11 +13,21 @@
     },
     "require": {
         "php": "^8.2",
+        "ext-json": "*",
         "php-di/php-di": "^7.0",
         "slim/psr7": "^1.6",
-        "slim/slim": "^4.11"
+        "slim/slim": "^4.11",
+        "symfony/console": "^6.2"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "scripts": {
+        "app": "php bin/app.php --ansi"
     }
 }
