--- a/api/docker/development/php-cli/Dockerfile
+++ b/api/docker/development/php-cli/Dockerfile
@@ -1,10 +1,13 @@
-FROM php:8.2-cli-alpine
+FROM php:8.2-cli
 
-RUN apk update && apk add unzip
+RUN pecl install xdebug\
+    && docker-php-ext-enable xdebug\
+    && rm -rf /tmp/pear
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
 COPY ./common/php/conf.d /usr/local/etc/php/conf.d
+COPY ./development/php/conf.d /usr/local/etc/php/conf.d
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
