--- a/api/composer.json
+++ b/api/composer.json
@@ -20,6 +20,7 @@
         "symfony/console": "^6.2"
     },
     "require-dev": {
+        "overtrue/phplint": "^9.0",
         "roave/security-advisories": "dev-latest"
     },
     "autoload": {
