--- a/api/docker/development/php-cli/Dockerfile
+++ b/api/docker/development/php-cli/Dockerfile
@@ -1,8 +1,4 @@
-FROM php:8.2-cli
-
-RUN pecl install xdebug\
-    && docker-php-ext-enable xdebug\
-    && rm -rf /tmp/pear
+FROM php:8.2-cli-alpine
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
