--- a/api/composer.json
+++ b/api/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "overtrue/phplint": "^9.0",
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -30,6 +31,8 @@
     },
     "scripts": {
         "lint": "phplint",
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
         "app": "php bin/app.php --ansi"
     }
 }
