--- a/api/composer.json
+++ b/api/composer.json
@@ -22,7 +22,8 @@
     "require-dev": {
         "overtrue/phplint": "^9.0",
         "roave/security-advisories": "dev-latest",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "vimeo/psalm": "^5.7"
     },
     "autoload": {
         "psr-4": {
@@ -33,6 +34,8 @@
         "lint": "phplint",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
+        "psalm": "psalm",
+        "psalm-si": "psalm --show-info=true",
         "app": "php bin/app.php --ansi"
     }
 }
