--- a/api/composer.json
+++ b/api/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "overtrue/phplint": "^9.0",
+        "phpunit/phpunit": "^10.0",
         "roave/security-advisories": "dev-latest",
         "squizlabs/php_codesniffer": "^3.7",
         "vimeo/psalm": "^5.7"
@@ -30,12 +31,18 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Test:\\": "tests/"
+        }
+    },
     "scripts": {
         "lint": "phplint",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "psalm": "psalm",
         "psalm-si": "psalm --show-info=true",
+        "test": "phpunit --color=always",
         "app": "php bin/app.php --ansi"
     }
 }
