--- a/api/docker/development/php-cli/Dockerfile
+++ b/api/docker/development/php-cli/Dockerfile
@@ -7,6 +7,10 @@ RUN apt update\
 RUN pecl install xdebug\
     && docker-php-ext-enable xdebug
 
+RUN apt install -y libpq-dev\
+    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql\
+    && docker-php-ext-install pdo_pgsql
+
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
 COPY ./common/php/conf.d /usr/local/etc/php/conf.d
