--- a/api/composer.json
+++ b/api/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
+        "doctrine/orm": "^2.14",
         "php-di/php-di": "^7.0",
         "ramsey/uuid": "*",
         "slim/psr7": "^1.6",
