--- a/api/composer.json
+++ b/api/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
+        "doctrine/migrations": "^3.6",
         "doctrine/orm": "^2.14",
         "laminas/laminas-config-aggregator": "^1.13",
         "php-di/php-di": "^7.0",
