--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,14 +48,14 @@ services:
     environment:
       - APP_ENV=dev
       - APP_DEBUG=1
-      - DB_HOST=api-postrgres
+      - DB_HOST=api-postgres
       - DB_USER=app
       - DB_PASSWORD=secret
       - DB_NAME=app
     volumes:
       - ./api:/app
 
-  api-postrgres:
+  api-postgres:
     image: postgres:15.2-alpine
     environment:
       - POSTGRES_USER=app
