--- a/api/docker/development/php-cli/Dockerfile
+++ b/api/docker/development/php-cli/Dockerfile
@@ -16,6 +16,9 @@ RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 COPY ./common/php/conf.d /usr/local/etc/php/conf.d
 COPY ./development/php/conf.d /usr/local/etc/php/conf.d
 
+COPY ./common/wait-for-it.sh /usr/local/bin/wait-for-it
+RUN chmod 555 /usr/local/bin/wait-for-it
+
 ENV XDEBUG_MODE=coverage
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
