--- a/api/docker/production/php-cli/Dockerfile
+++ b/api/docker/production/php-cli/Dockerfile
@@ -22,7 +22,7 @@ FROM php:8.2-cli-alpine
 
 RUN docker-php-ext-install opcache
 
-RUN apk add postgresql-dev\
+RUN apk add postgresql-dev bash coreutils\
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql\
     && docker-php-ext-install pdo_pgsql
     
@@ -30,6 +30,9 @@ RUN mv $PHP_INI_DIR/php.ini-production $PHP_INI_DIR/php.ini
 
 COPY ./docker/common/php/conf.d /usr/local/etc/php/conf.d
 COPY ./docker/production/php/conf.d /usr/local/etc/php/conf.d
+
+COPY ./common/wait-for-it.sh /usr/local/bin/wait-for-it
+RUN chmod 555 /usr/local/bin/wait-for-it
 
 WORKDIR /app
 
