--- a/api/composer.json
+++ b/api/composer.json
@@ -25,6 +25,7 @@
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.6",
         "overtrue/phplint": "^9.0",
         "phpunit/phpunit": "^10.0",
         "roave/security-advisories": "dev-latest",
