--- a/api/composer.json
+++ b/api/composer.json
@@ -22,6 +22,7 @@
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11",
         "symfony/console": "^6.2",
+        "symfony/mailer": "^6.2",
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
